feat: replace video with Cloudinary

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,10 @@
 html {
     scroll-behavior: smooth;
 }
+
+.video-clip-path{
+    .vjs-poster {
+        background: transparent !important;
+    }
+
+}
