--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,76 @@ body {
     }
 
 }
+
+.banner-transition {
+    view-transition-name: slide-in-out;
+}
+
+.navbar-item-transition {
+    view-transition-name: navbar-slide-in-out;
+}
+
+.header-button-transition {
+    view-transition-name: header-button;
+  }
+
+  ::view-transition-old(header-button) {
+    animation: buttons-exit 0.5s ease-out forwards;
+  }
+  
+  ::view-transition-new(header-button) {
+    animation: buttons-enter 0.5s ease-out forwards;
+  }
+  
+  @keyframes buttons-exit {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    50% {
+        opacity: 0;
+    }
+    to {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+  }
+  
+  @keyframes buttons-enter {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    50% {
+        opacity: 0;
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+::view-transition-old(slide-in-out),
+::view-transition-new(slide-in-out)  {
+    animation: none !important;
+}
+
+::view-transition-group(slide-in-out) {
+    z-index: auto !important;
+}
+
+::view-transition-image-pair(slide-in-out) {
+    isolation: isolate;
+    will-change: transform, opacity, clip-path;
+    z-index: 1;
+}
+
+::view-transition-new(slide-in-out) {
+    z-index: 10000;
+    animation: none !important;
+}
+
+::view-transition-old(slide-in-out) {
+    z-index: 1;
+    animation: none !important;
+}
